--- a/simple.html
+++ b/simple.html
@@ -15,6 +15,8 @@
 	<!-- Content Goes Here -->
 		<p>
 			Just some content
+			Cyberpunk
+			Samsung s20 plus
 		</p>
 	</main>
 	<footer class="container">
